# BigBrain

./: .gitignore  AGENTS.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/plan/: README.md  _phase-task-template.md  backlog-BB.md  idea and phases.md  phase-0-implementation-task-list.md  phase-1-implementation-task-list.md  phase-10-implementation-task-list.md  phase-11-polyglot-entity-store-task-list.md  phase-2-implementation-task-list.md  phase-3-implementation-task-list.md  phase-4-implementation-task-list.md  phase-5-implementation-task-list.md  phase-6-implementation-task-list.md  phase-7-implementation-task-list.md  phase-8-implementation-task-list.md  phase-9-implementation-task-list.md  sync_phase_task_templates.py
config/: example.yaml
data/kb/: bigbrain.db-shm  bigbrain.db-wal  export-test.jsonl
digest/Introduction-to-Algorithms-3rd-ed/: chapter-01-the-role-of-algorithms-in-computing.md  chapter-02-getting-started.md  chapter-03-growth-of-functions.md  chapter-04-divide-and-conquer.md  (+31 more)
plugins/: csv_ingester.py  html_compiler.py
tests/: conftest.py  test_change_detector.py  test_compile.py  test_config.py  test_distill.py  test_errors.py  test_hardening.py  test_kb_service.py  test_kb_store.py  test_notion.py  test_orchestrator.py  test_plugins.py  test_postgres_integration.py  test_providers.py  test_rag.py  test_stores.py  test_visual_content.py  test_wiki.py
wiki/: 0-1-principle.md  0-1-sorting-lemma.md  1.md  100n.md  2n.md  accounting-method.md  activity-selection-problem.md  ada-brunstein.md  advanced-data-structures.md  aggregate-analysis.md  alength.md  algorithm-analysis.md  algorithm-correctness.md  algorithm-design-and-analysis.md  algorithm-design.md  algorithm-efficiency.md  algorithm.md  algorithmic-efficiency.md  algorithms-as-a-technology.md  algorithms-as-technology.md  algorithms.md  all-pairs-shortest-paths.md  amortized-analysis.md  analysis-tools.md  approximate-solution.md  approximation-algorithms.md  arithmetic-instructions.md  array-l.md  array-r.md  array.md  arrays.md  assembler.md  assembly-line-scheduling.md  asymptotic-dominance.md  asymptotic-growth.md  asymptotic-notation.md  atnb-dn-cn.md  attribute-cascading.md  attribute.md  augmenting-data-structures.md  (+465 more)
(+225 files in other folders)
